# momir-printer

./: .gitignore  CNAME  LICENSE  README.md  index.html  pyproject.toml
momir/: __init__.py  ble_printer.py  card_store.py  image_cache.py  server.py  thermal_renderer.py
momir/static/: index.html
printdialog/: __init__.py  renderer.py  server.py
printdialog/static/: index.html
scripts/: build_creatures.py  tune_ble.py
tests/: conftest.py  test_ble_protocol.py  test_card_store.py  test_image_cache.py  test_pd_renderer.py  test_pd_server.py  test_server.py  test_thermal_renderer.py
web/: index.html
